<resources>
    <string name="app_name">DistanceDuel</string>
    <!-- Game strings -->
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="normal_mode">Normal</string>
    <string name="write_question_mode">Challenge</string>
    <string name="answer">Answer</string>
    <string name="leave_game_question">Are you sure you want to leave the game?</string>
    <string name="create_more_questions">Create More Questions</string>
    <string name="see_final_result">Final Result</string>
    <string name="next_question">Next Question</string>
    <string name="yes">Yes</string>
    <string name="in_lobby">You are now in the lobby</string>
    <string name="start_game">Start Game</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="create_question">Create Question</string>
    <string name="wait_for_answers">Wait for everybody to answer</string>
    <string name="wait_for_player_question">Wait for everybody to create question</string>
    <string name="write_locations">Write in two locations!</string>
    <string name="hint_loc_a">Location A</string>
    <string name="hint_loc_b">Location B</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="enter_game_code">Enter Game Code</string>
    <string name="final_result">Final Result</string>
    <string name="partial_result">Scoreboard</string>
    <string name="close">Close</string>
    <string name="tutorial">Tutorial</string>
    <string name="game_code">Game code</string>
    <string name="question">Question</string>
    <string name="tutorial_new_game"><b>New Game:</b> host a new game choosing either Normal or Challenge Mode. Choose a nickname for that particular game. After creating a game you are sent to a lobby where the game code is presented, as well as an overview of the players joining. Press “Start Game” to start the game.\n\n<b>Join Game:</b> join an existing game by typing in the Game Code for that game. Choose a nickname for that particular game. After joining the game you are sent to a lobby where you can see the other players joining. Wait for the host to start the game.\n\n<b>Normal Mode:</b> the system generates questions.\n\n<b>Challenge Mode:</b>  before the game starts, the players input two locations, and thus generate questions for the other players.\n\n<b>During a game</b> you are presented with questions. You guess the correct answer by typing in a number, before pressing the “Answer” button. A timer shows how much time you have left to answer.
</string>
    <string name="correct_answer">Correct answer</string>
    <string name="how_many">How many</string>
    <string name="are_between">are between</string>
    <string name="and">and</string>
    <string name="dark_mode">Dark mode</string>

    <!-- Error messages -->
    <string name="error_nickname_already_taken">That nickname is already taken</string>
    <string name="error_game_code_does_not_exist">The game code does not exist</string>
    <string name="error_game_already_started">The game has already started</string>
    <string name="error_could_not_create_game">Could not create game</string>
    <string name="error_could_not_connect_to_server">Could not connect to game server</string>

    <!-- Words for units -->
    <string name="bananas">bananas</string>
    <string name="kilometers">kilometers</string>
    <string name="meters">meters</string>
    <string name="cars">cars</string>
    <string name="eiffel_tower">Eiffel towers</string>
</resources>