<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    android:id="@+id/main">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            app:layout_constraintVertical_bias="0.1"
            style="@style/HeadingStyle"
            android:text="@string/write_locations"/>
        <EditText
            app:layout_constraintVertical_bias="0.25"
            android:id="@+id/locationa"
            android:hint="@string/hint_loc_a"
            style="@style/InputField"
             />

        <EditText
            style="@style/InputField"
            app:layout_constraintVertical_bias="0.35"
            android:id="@+id/locationb"
            android:hint="@string/hint_loc_b"
             />
        <include
            android:id="@+id/include"
            layout="@layout/suggestion_view"
            style="@style/ConstraintPosition"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.2"/>
        <Button
            app:layout_constraintVertical_bias="0.85"
            android:text="@string/create_question"
            android:onClick="createQuestion"
            style="@style/PrimaryButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>