<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="30dip"
    android:padding="20dip"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:background="@drawable/popup"
    android:id="@+id/popup_leave_game"
    >


    <Button
        android:id="@+id/yes"
        style="@style/PopupButton"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0.9"
        android:onClick="leaveGame"
        android:text="@string/yes"/>
    <Button
        android:id="@+id/no"
        style="@style/PopupButton"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0.1"
        android:onClick="closePopup"
        android:text="@string/no"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        style="@style/TextView"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/leave_game_question" />

</androidx.constraintlayout.widget.ConstraintLayout>
